--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "Bose-30",
+  "name": "bose-30",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/Bose-30/",
+    "build": "vite build --base=/bose-30/",
     "preview": "vite preview"
   },
   "devDependencies": {
